Add sentry-secrets for sentry secrets which shouldn't be in configmap

--- a/sentry/templates/deployment-sentry-cron.yaml
+++ b/sentry/templates/deployment-sentry-cron.yaml
@@ -56,6 +56,9 @@ spec:
         args:
           - "run"
           - "cron"
+        envFrom:
+        - secretRef:
+            name: sentry-secrets
         env:
         - name: SNUBA
           value: http://{{ template "sentry.fullname" . }}-snuba:{{ template "snuba.port" }}
