--- a/sentry/templates/hooks/user-create.yaml
+++ b/sentry/templates/hooks/user-create.yaml
@@ -52,6 +52,9 @@ spec:
             else \
               exit 1; \
             fi
+        envFrom:
+          - secretRef:
+              name: sentry-secrets
         env:
         {{- if .Values.postgresql.enabled }}
         - name: POSTGRES_PASSWORD
