--- a/sentry/values.yaml
+++ b/sentry/values.yaml
@@ -71,7 +71,7 @@ sentry:
       targetCPUUtilizationPercentage: 50
 
   features:
-    orgSubdomains: true
+    orgSubdomains: false
 
   worker:
     replicas: 3
